--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" >
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/447f3d9405.js" crossorigin="anonymous"></script>
+    <title>A&E Design & Photography</title>
 </head>
 <body>
-    
-</body>
+    <div id="home"class="topnav">
+        <a href="#home">Home</a>
+        <a href="#about">About</a> 
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+        <h1 class="logo">A&E Design & Photography</h1>
+        <i class="fab fa-facebook fa-2x"></i>
+        <i class="fab fa-instagram fa-2x"></i>
+      </div>
+      <h1 class="section1head">About</h1>
+      <div> <p id="about" class="section1">Meet Amanda</p>
+        <p class="para1">Amanda recently left the teaching profession to pursue a career in tech.<br>
+            Amanda began attending Kenzie Academy in July 2019 to study UX/UI<br>Engineering.
+            She completed her first six months in January and has<br> received her UX Design Certificate.
+            She began her UI studies in January<br> and is excited to receive her UX/UI Engineering Certificate
+            in July.</p>
+        <p class=para2>Amanda is 32 years old and has two beautiful children. Aria is 8 and<br> Ezra is 22 months. 
+            When she is not studying or working at her job with<br> Southern Legacy Marketing & Design, she loves to
+            spend time with her family.<br> Other hobbies include reading, video games, and photography.
+        </p>
+        <button class="button1">Read More</button>
+        <hr class="rounded">
+        <hr class="solid">
+        </div>
+        <img class="mainimage" src="images/amandaezra.jpg" alt="A picture of Amanda with her son Ezra">
+        <div class="vl"></div>
+    </body>
 </html>
